{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 1250,
  "lineage": "69c855a3-ebaf-10e3-d213-4b56b10e49bb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c6f89d744eebb5de",
            "arn": "arn:aws:ec2:us-east-1:677276110885:elastic-ip/eipalloc-0c6f89d744eebb5de",
            "domain": "vpc",
            "id": "eipalloc-0c6f89d744eebb5de",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-228-82-21.compute-1.amazonaws.com",
            "public_ip": "3.228.82.21",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c6f89d744eebb5de",
            "association_id": "eipassoc-059b329e76217daaf",
            "connectivity_type": "public",
            "id": "nat-040e068ee407c91da",
            "network_interface_id": "eni-0975092aa51317202",
            "private_ip": "10.20.101.147",
            "public_ip": "3.228.82.21",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c42282f07989ff74"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:677276110885:security-group/sg-04e71b48b012e01b0",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-04e71b48b012e01b0",
            "ingress": [],
            "name": "eks-cluster-cluster-2025030317033518960000000e",
            "name_prefix": "eks-cluster-cluster-",
            "owner_id": "677276110885",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "eks-cluster-cluster",
              "Terraform": "true",
              "kubernetes.io/cluster/eks-cluster": "owned"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "eks-cluster-cluster",
              "Terraform": "true",
              "kubernetes.io/cluster/eks-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0870c3457949b670b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:677276110885:security-group/sg-0fccfa972605b7ec0",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-0fccfa972605b7ec0",
            "ingress": [],
            "name": "eks-cluster-node-2025030317033424610000000d",
            "name_prefix": "eks-cluster-node-",
            "owner_id": "677276110885",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "eks-cluster-node",
              "Terraform": "true",
              "kubernetes.io/cluster/eks-cluster": "owned"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "eks-cluster-node",
              "Terraform": "true",
              "kubernetes.io/cluster/eks-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0870c3457949b670b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-957044764",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04e71b48b012e01b0",
            "security_group_rule_id": "sgr-0b4f6b470ee81a069",
            "self": false,
            "source_security_group_id": "sg-0fccfa972605b7ec0",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-2212865368",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0fccfa972605b7ec0",
            "security_group_rule_id": "sgr-02d9fcd62778b9f14",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1802702293",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fccfa972605b7ec0",
            "security_group_rule_id": "sgr-0e416b0b67c7c4712",
            "self": false,
            "source_security_group_id": "sg-04e71b48b012e01b0",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-2480775081",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fccfa972605b7ec0",
            "security_group_rule_id": "sgr-0d361f3f9b9112b42",
            "self": false,
            "source_security_group_id": "sg-04e71b48b012e01b0",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-1520433215",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fccfa972605b7ec0",
            "security_group_rule_id": "sgr-0590b8a7b7c4b73ff",
            "self": false,
            "source_security_group_id": "sg-04e71b48b012e01b0",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-1237566494",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fccfa972605b7ec0",
            "security_group_rule_id": "sgr-072bb3c2e7a2aa433",
            "self": false,
            "source_security_group_id": "sg-04e71b48b012e01b0",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-761460693",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fccfa972605b7ec0",
            "security_group_rule_id": "sgr-0c01379527e90d0d5",
            "self": false,
            "source_security_group_id": "sg-04e71b48b012e01b0",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-3039851547",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fccfa972605b7ec0",
            "security_group_rule_id": "sgr-07718c8d8cfedb752",
            "self": false,
            "source_security_group_id": "sg-04e71b48b012e01b0",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-928523394",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fccfa972605b7ec0",
            "security_group_rule_id": "sgr-0766de697c2d81f26",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1899638311",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fccfa972605b7ec0",
            "security_group_rule_id": "sgr-0d152036a50510dd9",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-3580202440",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0fccfa972605b7ec0",
            "security_group_rule_id": "sgr-0033e707f2d5bb79e",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:677276110885:network-acl/acl-039dfbb16d560ff93",
            "default_network_acl_id": "acl-039dfbb16d560ff93",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-039dfbb16d560ff93",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "677276110885",
            "subnet_ids": [
              "subnet-0692f439b9b22d5d4",
              "subnet-06d2d764b4af7ed67",
              "subnet-0c42282f07989ff74",
              "subnet-0d3ed22c6ca9c6135"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "eks-vpc-default",
              "Terraform": "true",
              "kubernetes.io/cluster/eks-cluster": "owned"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "eks-vpc-default",
              "Terraform": "true",
              "kubernetes.io/cluster/eks-cluster": "owned"
            },
            "vpc_id": "vpc-0870c3457949b670b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:677276110885:route-table/rtb-034646163f6a819a5",
            "default_route_table_id": "rtb-034646163f6a819a5",
            "id": "rtb-034646163f6a819a5",
            "owner_id": "677276110885",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "eks-vpc-default",
              "Terraform": "true",
              "kubernetes.io/cluster/eks-cluster": "owned"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "eks-vpc-default",
              "Terraform": "true",
              "kubernetes.io/cluster/eks-cluster": "owned"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0870c3457949b670b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:677276110885:security-group/sg-0f7b21e1af2e4cfa0",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0f7b21e1af2e4cfa0",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "677276110885",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "eks-vpc-default",
              "Terraform": "true",
              "kubernetes.io/cluster/eks-cluster": "owned"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "eks-vpc-default",
              "Terraform": "true",
              "kubernetes.io/cluster/eks-cluster": "owned"
            },
            "vpc_id": "vpc-0870c3457949b670b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f824b9d2c23e4a8c",
            "arn": "arn:aws:ec2:us-east-1:677276110885:elastic-ip/eipalloc-0f824b9d2c23e4a8c",
            "domain": "vpc",
            "id": "eipalloc-0f824b9d2c23e4a8c",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-86-37-199.compute-1.amazonaws.com",
            "public_ip": "52.86.37.199",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "eks-vpc-us-east-1a",
              "Terraform": "true",
              "kubernetes.io/cluster/eks-cluster": "owned"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "eks-vpc-us-east-1a",
              "Terraform": "true",
              "kubernetes.io/cluster/eks-cluster": "owned"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:677276110885:internet-gateway/igw-00f3df33e2905d621",
            "id": "igw-00f3df33e2905d621",
            "owner_id": "677276110885",
            "tags": {
              "Environment": "dev",
              "Name": "eks-vpc",
              "Terraform": "true",
              "kubernetes.io/cluster/eks-cluster": "owned"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "eks-vpc",
              "Terraform": "true",
              "kubernetes.io/cluster/eks-cluster": "owned"
            },
            "vpc_id": "vpc-0870c3457949b670b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f824b9d2c23e4a8c",
            "association_id": "eipassoc-0147e2682a140d20f",
            "connectivity_type": "public",
            "id": "nat-051b722ad720a760b",
            "network_interface_id": "eni-09db3f281a7a037e9",
            "private_ip": "10.20.101.118",
            "public_ip": "52.86.37.199",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c42282f07989ff74",
            "tags": {
              "Environment": "dev",
              "Name": "eks-vpc-us-east-1a",
              "Terraform": "true",
              "kubernetes.io/cluster/eks-cluster": "owned"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "eks-vpc-us-east-1a",
              "Terraform": "true",
              "kubernetes.io/cluster/eks-cluster": "owned"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06715a86ec0249feb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-051b722ad720a760b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06715a86ec0249feb",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00f3df33e2905d621",
            "id": "r-rtb-00ad461edacee31c11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00ad461edacee31c1",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:677276110885:route-table/rtb-06715a86ec0249feb",
            "id": "rtb-06715a86ec0249feb",
            "owner_id": "677276110885",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "eks-vpc-private",
              "Terraform": "true",
              "kubernetes.io/cluster/eks-cluster": "owned"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "eks-vpc-private",
              "Terraform": "true",
              "kubernetes.io/cluster/eks-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0870c3457949b670b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:677276110885:route-table/rtb-00ad461edacee31c1",
            "id": "rtb-00ad461edacee31c1",
            "owner_id": "677276110885",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "eks-vpc-public",
              "Terraform": "true",
              "kubernetes.io/cluster/eks-cluster": "owned"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "eks-vpc-public",
              "Terraform": "true",
              "kubernetes.io/cluster/eks-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0870c3457949b670b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-050a4c61adfa23126",
            "route_table_id": "rtb-06715a86ec0249feb",
            "subnet_id": "subnet-06d2d764b4af7ed67"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d50429cfad2f777c",
            "route_table_id": "rtb-06715a86ec0249feb",
            "subnet_id": "subnet-0d3ed22c6ca9c6135"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d46888570a085c5a",
            "route_table_id": "rtb-00ad461edacee31c1",
            "subnet_id": "subnet-0c42282f07989ff74"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0560098d87411d5b8",
            "route_table_id": "rtb-00ad461edacee31c1",
            "subnet_id": "subnet-0692f439b9b22d5d4"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:677276110885:subnet/subnet-06d2d764b4af7ed67",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.20.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06d2d764b4af7ed67",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "677276110885",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "eks-vpc-private-us-east-1a",
              "Terraform": "true",
              "kubernetes.io/cluster/eks-cluster": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "eks-vpc-private-us-east-1a",
              "Terraform": "true",
              "kubernetes.io/cluster/eks-cluster": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0870c3457949b670b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:677276110885:subnet/subnet-0d3ed22c6ca9c6135",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.20.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d3ed22c6ca9c6135",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "677276110885",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "eks-vpc-private-us-east-1b",
              "Terraform": "true",
              "kubernetes.io/cluster/eks-cluster": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "eks-vpc-private-us-east-1b",
              "Terraform": "true",
              "kubernetes.io/cluster/eks-cluster": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0870c3457949b670b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:677276110885:subnet/subnet-0c42282f07989ff74",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.20.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c42282f07989ff74",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "677276110885",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "eks-vpc-public-us-east-1a",
              "Terraform": "true",
              "kubernetes.io/cluster/eks-cluster": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "eks-vpc-public-us-east-1a",
              "Terraform": "true",
              "kubernetes.io/cluster/eks-cluster": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0870c3457949b670b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:677276110885:subnet/subnet-0692f439b9b22d5d4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.20.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0692f439b9b22d5d4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "677276110885",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "eks-vpc-public-us-east-1b",
              "Terraform": "true",
              "kubernetes.io/cluster/eks-cluster": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "eks-vpc-public-us-east-1b",
              "Terraform": "true",
              "kubernetes.io/cluster/eks-cluster": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0870c3457949b670b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:677276110885:vpc/vpc-0870c3457949b670b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-039dfbb16d560ff93",
            "default_route_table_id": "rtb-034646163f6a819a5",
            "default_security_group_id": "sg-0f7b21e1af2e4cfa0",
            "dhcp_options_id": "dopt-09be54f51d7bfe1ee",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0870c3457949b670b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-034646163f6a819a5",
            "owner_id": "677276110885",
            "tags": {
              "Environment": "dev",
              "Name": "eks-vpc",
              "Terraform": "true",
              "kubernetes.io/cluster/eks-cluster": "owned"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "eks-vpc",
              "Terraform": "true",
              "kubernetes.io/cluster/eks-cluster": "owned"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}